# unam.fi.compilers.g5.03-1

unam.fi.compilers.g5.03/ParserSTD_Practice/: parseTree.txt  pyproject.toml
unam.fi.compilers.g5.03/ParserSTD_Practice/src/parserStd/: core.py
unam.fi.compilers.g5.03/ParserSTD_Practice/src/tests/: testParserStd.py
